--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
     defaultConfig {
         applicationId "org.mobilburger.learnwords"
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 23
         versionName "1.48"
     }
@@ -21,22 +20,28 @@ android {
 
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
+
+ext {
+    supportLibVersion = '28.0.3'
+}
+
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile project(':database')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':database')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'io.reactivex:rxjava:1.2.9'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'io.reactivex:rxjava:1.3.6'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     // Firebase Authentication
     //noinspection GradleCompatible
     implementation 'com.google.firebase:firebase-auth:11.8.0'
@@ -44,7 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.google.firebase:firebase-ads:11.8.0'
     // Firebase UI
-    implementation 'com.firebaseui:firebase-ui:2.3.0'
+    implementation 'com.firebaseui:firebase-ui:3.2.2'
 
     // Google Sign In SDK (only required for Google Sign In)
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
@@ -52,6 +57,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //algolia(full text search)
+   implementation 'com.algolia:algoliasearch-android:3.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
